# foxus

./: .editorconfig  .gitignore  CLAUDE.md  DEVELOPMENT.md  Makefile  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/: settings.json
.claude/hooks/: auto-format.sh  commit-gate.sh  skill-reminder.sh  test-pass-tracker.sh
.github/workflows/: quality-gate.yml
docs/plans/: 2025-02-04-foxus-design.md  2025-02-04-foxus-implementation.md  2026-02-11-frontend-react-migration.md  2026-02-12-rust-backend-refactor.md
extension/: background.js  blocked.html  blocked.js  manifest.json  utils.js
extension/popup/: popup.css  popup.html  popup.js
src/: App.tsx  app.js  index.html  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/categorizer/: mod.rs
src-tauri/src/db/: migrations.rs  mod.rs  schema.rs
src-tauri/src/focus/: mod.rs
src-tauri/src/models/: activity.rs  category.rs  focus_schedule.rs  focus_session.rs  mod.rs  rule.rs
src-tauri/src/native_host/: mod.rs
src-tauri/src/platform/: linux.rs  macos.rs  mod.rs  types.rs
src-tauri/src/tracker/: mod.rs
src/_archived/: index.html.bak
src/components/: app-list-item.tsx  focus-view.tsx  index.ts  stats-view.tsx
src/components/ui/: badge.tsx  (+4 more)
src/hooks/: use-tauri.ts
src/tauri/: .gitignore  CLAUDE.md  Cargo.toml  clippy.toml  tauri.conf.json
src/types/: api.ts
src/utils/: helpers.ts
src/web/: App.tsx  CLAUDE.md  biome.json  eslint.config.js  lint-staged.config.js  main.tsx  vitest.config.ts
(+68 files in other folders)
