[package]
name = "foxus"
version = "0.1.0"
description = "A local-first productivity tracker with focus mode"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "foxus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
directories = "5.0"

[dev-dependencies]
tempfile = "3.10"
